2011-04-24 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: use `` instead of $()

2011-04-23 Borut Razem <borut.razem AT gmail.com>

	* packages/build.rsync/Makefile: resync version 3.0.8
	* .sdcc_builder/profile: added /opt/solstudio12.2/bin to path

2011-04-11 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile, packages/build.gmp_mpfr/Makefile:
	  force 32 bit compiltion on Solaris

2011-04-10 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile: added

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile, packages/build.gmp_mpfr/Makefile:
	  updated to gcc 4.6.0, binutils 2.21, w32api 3.17-2, mpfr 3.0.1

2011-03-13 Borut Razem <borut.razem AT gmail.com>

	* packages/build.boost/Makefile: fixed boost installation on Solaris:
	  define INCLUDES_ONLY on Solaris due a compiler bug;
	  see http://forums.oracle.com/forums/thread.jspa?threadID=2158828&tstart=30

2011-03-03 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: fixed dos utils aliases on Solaris

2011-02-06 Borut Razem <borut.razem AT gmail.com>

	* packages/build.ncurses/Makefile: tab indentation
	  packages/build.boost, packages/build.boost/download,
	  packages/build.boost/Makefile: added

2010-09-15 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc 4.5.1, w32api 3.15-1

2010-08-29 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: fixed upload the new version of ${TREE_FILE},
	  needed by snap.php to create sdcc snapshots web page;
	  cosmetic changes

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: snapshot files moved to SourceForge FRS

2010-07-03 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: added dos utils aliases, ndeeded on Ubuntu

2010-07-02 Borut Razem <borut.razem AT siol.net>

	* packages/build.gmp_mpfr/Makefile: updated to gmp 5.0.2, mpfr 3.0.0,
	  mpc 0.8.2

2010-04-18 Borut Razem <borut.razem AT siol.net>
